UploadDashboard/war/Runtime.css
@CHARSET "UTF-8";

/*
	This file contains CSS styling that is applied at runtime
	as opposed to at compile time.
	Runtime styling needs to be available to the browser.
*/

.underlined {
	text-decoration: underline;
}
.reloginSubmit {
    color: buttontext;
    background-color: #f0f1f0;
    border: 1px solid #bbb;
    padding: 2px 8px 3px;
    position:absolute;
    bottom: 5px;
    right: 65px;
    font: 400 11px system-ui;
    border-radius: 5px;
}
.dataColumnSelectionCell {
	width: 97%;
}
.dataColumnType_div {
    margin: 3px 0px;
	border: 1px solid black;
	background-color: white;
}
.dataColumnType_name {
    padding-left: 4px;
    overflow: hidden;
}
.dataColumnType_icon {
	height: 12px;
	border: 1px solid black;
    border-radius: 2px;
    cursor: pointer;
    margin: 1px;
    padding: 2px 2px;
	float: right;
}
.dataColumnTypeWarning {
	background-color: #f9eb8b;
}
.dataColumnTypeError {
	background-color: #ff978d;
}
.dataColumnTypeCritical {
	background-color: #ff1610;
}
.oa_cell {
	border: none !important;
}
.oa_row {
}
.selected_row {
	background-color: #fffed4;
}
.oa_row td {
	border: 2px purple !important;
}
.oa_datagrid_normal_row {
}
.oa_datagrid_checker_warning_row {
	background-color: #f7f6ad !important;
}
.oa_datagrid_checker_error_row {
	background-color: #ffe6e6 !important;
}
.oa_datagrid_user_warning_row {
	background-color: #f9eb8b !important;
}
.oa_datagrid_user_error_row {
	background-color: #fce8e8 !important;
}
.loadingimage {
	display: inline;
	padding: 3px 3px;
	width: 20%;
	vertical-align: top;
}
.plotsimage {
	display: inline;
	padding: 3px 3px;
	width: 32%;
	vertical-align: top;
}
.lastimage {
	margin-bottom: 50px;
	padding-bottom: 10px;
}
.missingInfoItem {
    border-width: 2px;
	border-color: red;
}
.blocking {
    color: red;
	font-size: larger;
}
.red {
    color: red;
}
.gray {
	color: gray;
}
.larger-font {
	font-size: larger;
}
.popupPreviewImage {
	width: 99%;
	border: 1px solid #ccc;
}
.popupPreviewDialogBox {
	width: 45%;
}
.popupDialogPanel {
	border: 1px;
}
.full_width {
	width: 100%;
}
.popupDialogButton {
	float: right;
	margin: 1em !important;
}
.footerpanel {
    width: 35em;
    margin: 1em auto;
}
.buildVersion {
    position: absolute;
    right: 2.2em;
    bottom: 0.8em;
    color: #0066cc;
} 
.slideIn {
   display: block;
   z-index: 25;
}
.slideOut {
	display: none;
}
.showInline {
    display: inline;
}
.notification_divider_line {
	width:90%; 
	margin:0 4.5em .5em;
}
.dialogVPanel {
  margin: 5px;
}
.dialogVPanel table {
	width: 100%;
}
/* .hide {
	display: none;
} */

